--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230322191151">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230330162533">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,52 +18,49 @@
 			<div class="header__container_wide">
 				<div class="header__top">
 					<div class="header__title">
-						<h3>Екологічна Атестована Лабораторія</h3>
+						<h3>Атестована Лабораторія</h3>
 					</div>
-					<!-- search -->
-
-
-
 				</div>
 			</div>
 		</header>
 		<aside class="sidebar">
 			<div class="sidebar__container_wide">
+
 				<div class="sidebar__blocks">
-
-					<div class="sidebar__menu menu">
-						<button type="button" class="menu__icon icon-menu"><span></span></button>
-						<div class="sidebar__logo">
-							<a href="#" class="img_logo"><img src="img/logo.jpg" alt="logo"></a>
-						</div>
-
-						<nav class="menu__body">
-							<ul class="menu__list">
-								<li class="menu__item"><a href="" class="menu__link">Головна</a></li>
-								<li class="menu__item"><a href="" class="menu__link">Послуги</a></li>
-								<li class="menu__item"><a href="" class="menu__link">Лабораторія</a></li>
-								<li class="menu__item"><a href="" class="menu__link">Галерея</a></li>
-								<li class="menu__item"><a href="" class="menu__link">Контакти</a></li>
-								<li class="menu__item"><a href="" class="menu__link">Атестація</a></li>
-							</ul>
-						</nav>
+					<button type="button" class="menu__icon icon-menu"><span></span></button>
+					<div class="sidebar__logo">
+						<a href="#"><img class="img_logo" src="img/logo.jpg" alt="logo"></a>
 					</div>
-					<div class="sidebar__block">
-						<div class="sidebar__call">
-							<div class="calltell__one">+38 (097) 29-177-15</div>
-							<div class="calltell__two">+38 (097) 29-177-15</div>
-						</div>
-						<div class="sidebar__social">
-							<div class="social__img"></div>
-							<div class="social__footer">
-								<a class="social__icon" href="#">
-									<img class="social__instagram" src="img/social/iconinstagram.svg" alt="instagram"></a>
-								<a class="social__icon" href="#">
-									<img class="social__instagram" src="img/social/iconfacebook.svg" alt="instagram"></a>
-								<a class="social__icon" href="#">
-									<img class="social__instagram" src="img/social/iconyoutube.svg" alt="instagram"></a>
+					<div class="menu__adapt">
+						<div class="sidebar__menu menu">
+							<nav class="menu__body">
+								<ul class="menu__list">
+									<li class="menu__item"><a href="/" class="menu__link">Головна</a></li>
+									<li class="menu__item"><a href="" class="menu__link">Послуги</a></li>
+									<li class="menu__item"><a href="../laboratory.html" class="menu__link">Лабораторія</a></li>
+									<li class="menu__item"><a href="" class="menu__link">Поради та новини</a></li>
+									<li class="menu__item"><a href="" class="menu__link">Контакти</a></li>
+									<li class="menu__item"><a href="" class="menu__link">Атестація</a></li>
+								</ul>
+							</nav>
+							<div class="sidebar__block">
+								<div class="sidebar__call">
+									<div class="calltell__one">+38 (097) 29-177-15</div>
+									<div class="calltell__two">+38 (097) 29-177-15</div>
+								</div>
+								<div class="sidebar__social">
+									<div class="social__img"></div>
+									<div class="social__footer">
+										<a class="social__icon" href="#">
+											<img class="social__instagram" src="img/social/iconinstagram.svg" alt="instagram"></a>
+										<a class="social__icon" href="#">
+											<img class="social__instagram" src="img/social/iconfacebook.svg" alt="instagram"></a>
+										<a class="social__icon" href="#">
+											<img class="social__instagram" src="img/social/iconyoutube.svg" alt="instagram"></a>
+									</div>
+									<div class="sidebar__button"></div>
+								</div>
 							</div>
-							<div class="sidebar__button"></div>
 						</div>
 					</div>
 				</div>
@@ -73,22 +70,17 @@
 				<div class="home__content">
 
 					<div class="home__block request-form">
-
 						<div class="request-form__header">
 							<h3 class="request-form__title">Зворотній зв'язок</h3>
-
 							<form class="form" action="/" method="post">
 								<div class="form__group">
 									<input class="input input__user input__dark" type="text" placeholder="Ваше Ім'я">
 								</div>
 								<div class="form__group">
-									<input class="input input__phone input__dark" type="tel" placeholder="Ваш Телефон">
-								</div>
-								<div class="form__group">
 									<input class="input input__email input__dark" type="email" placeholder="Ваша Пошта">
 								</div>
 								<button class="btn btn__block btn__orange">
-									<span>Перезвоніть мені</span>
+									<span>Напишіть мені</span>
 								</button>
 							</form>
 						</div>
@@ -105,7 +97,7 @@
 							<div class="block-service__icon-top">
 								<div class="block-service__icon">1</div>
 								<div class="block-service__img">
-									<img src="img/icon/services/1.svg" alt="">
+									<img class="block-service__imges" src="img/icon/services/1.svg" alt="">
 								</div>
 							</div>
 							<div class="block-service__title">ОХОРОНА АТМОСФЕРНОГО ПОВІТРЯ</div>
@@ -119,7 +111,7 @@
 							<div class="block-service__icon-top">
 								<div class="block-service__icon">2</div>
 								<div class="block-service__img">
-									<img src="img/icon/services/2.svg" alt="">
+									<img class="block-service__imges" src="img/icon/services/2.svg" alt="">
 								</div>
 							</div>
 							<div class="block-service__title">СТРАТЕГІЧНА
@@ -134,7 +126,7 @@
 							<div class="block-service__icon-top">
 								<div class="block-service__icon">3</div>
 								<div class="block-service__img">
-									<img src="img/icon/services/3.svg" alt="">
+									<img class="block-service__imges" src="img/icon/services/3.svg" alt="">
 								</div>
 							</div>
 							<div class="block-service__title">СПЕЦІАЛЬНЕ ВОДОКОРИСТУВАННЯ</div>
@@ -148,7 +140,7 @@
 							<div class="block-service__icon-top">
 								<div class="block-service__icon">4</div>
 								<div class="block-service__img">
-									<img src="img/icon/services/4.svg" alt="">
+									<img class="block-service__imges" src="img/icon/services/4.svg" alt="">
 								</div>
 							</div>
 							<div class="block-service__title">ПОВОДЖЕННЯ
@@ -163,7 +155,7 @@
 							<div class="block-service__icon-top">
 								<div class="block-service__icon">5</div>
 								<div class="block-service__img">
-									<img src="img/icon/services/5.svg" alt="">
+									<img class="block-service__imges" src="img/icon/services/5.svg" alt="">
 								</div>
 							</div>
 							<div class="block-service__title">ЛАБОРАТОРНІ ДОСЛІДЖЕННЯ</div>
@@ -177,7 +169,7 @@
 							<div class="block-service__icon-top">
 								<div class="block-service__icon">6</div>
 								<div class="block-service__img">
-									<img src="img/icon/services/6.svg" alt="">
+									<img class="block-service__imges" src="img/icon/services/6.svg" alt="">
 								</div>
 							</div>
 							<div class="block-service__title">ПРОХОДЖЕННЯ ПРОЦЕДУРИ ОВД</div>
@@ -191,7 +183,7 @@
 							<div class="block-service__icon-top">
 								<div class="block-service__icon">7</div>
 								<div class="block-service__img">
-									<img src="img/icon/services/7.svg" alt="">
+									<img class="block-service__imges" src="img/icon/services/7.svg" alt="">
 								</div>
 							</div>
 							<div class="block-service__title">КОНСУЛЬТАТИВНІ ПОСЛУГИ</div>
@@ -205,7 +197,7 @@
 							<div class="block-service__icon-top">
 								<div class="block-service__icon">8</div>
 								<div class="block-service__img">
-									<img src="img/icon/services/8.svg" alt="">
+									<img class="block-service__imges" src="img/icon/services/8.svg" alt="">
 								</div>
 							</div>
 							<div class="block-service__title">НАВЧАННЯ ПО НАКАЗУ №52 ПГОУ</div>
@@ -219,7 +211,7 @@
 							<div class="block-service__icon-top">
 								<div class="block-service__icon">9</div>
 								<div class="block-service__img">
-									<img src="img/icon/services/9.svg" alt="">
+									<img class="block-service__imges" src="img/icon/services/9.svg" alt="">
 								</div>
 							</div>
 							<div class="block-service__title">ПІСЛЯПРОЕКТНИЙ МОНІТОРИНГ</div>
@@ -244,7 +236,10 @@
 									<img class="images-about__two" src="img/about/2.jpg" alt="">
 									<img class="images-about__three" src="img/about/3.jpg" alt="">
 								</div>
-								<img class="images-about__four" src="img/about/4.jpg" alt="">
+								<div class="images-about__footer">
+									<img class="images-about__four" src="img/about/4.jpg" alt="">
+								</div>
+
 							</div>
 						</div>
 						<div class="about__block">
@@ -382,7 +377,7 @@
 			</footer>
 		</main>
 	</div>
-	<script src="js/app.min.js?_v=20230322191151"></script>
+	<script src="js/app.min.js?_v=20230330162533"></script>
 </body>
 
 </html>
